# dotfiles

./: .Xresources  .bashrc_interactive  .chezmoi.toml.tmpl  .gitconfig  .gitignore  .gitmodules  .tmux.conf  .xmobarrc  Cargo.toml  LICENSE  Makefile  README  README.md  bash_profile  dot_gitconfig.tmpl  dot_gitignore_global  dot_tool-versions.tmpl  dot_zshenv  gitconfig  gitignore_global  install.go  install.py  install.sh  makefile
.bin/: suspend
.matplotlib/: .gitignore
.vim/syntax/: markdown.vim
.vim/vimrc/: options.vim
.xmonad/: xmonad.hi  xmonad.hs
archive/: .Xresources  .profile  bashrc  gitconfig  install.py
archive/.xmonad/: xmobar.hs
brew/: Brewfile  Brewfile.lock.json
dot_config/age/: key.txt.tmpl
dot_config/asdf/: setup.py
dot_config/brew/: Brewfile  Makefile
dot_config/gh/: encrypted_private_hosts.yml.age
dot_config/nvim/: init.lua
dot_config/nvim/lua/jlw/: lang.lua  plugins.lua
dot_config/zsh/: README  dot_zimrc  dot_zprofile  dot_zshenv  dot_zshrc  encrypted_figma.zsh.age  encrypted_work.zshenv.age
dot_local/share/: emoji_messages.txt
git/: gitconfig  gitignore_global
nvim/: coc-settings.json
nvim/lua/jlw/: lang.lua  plugins.lua  which_key.lua
nvim/plugin/: packer_compiled.lua
rtorrent/: rtorrentrc
src/: main.rs
starship/: starship.toml
tmux/: tmux.conf
vim/: vimrc
vim/vim/: .netrwhist  vim
vim/vim/bundle/: command-t  tabular  vim-scala  vim-surround
vim/vim/vimrc/: colors.vim  options.vim  plugins.vim
