[package]
name = "dotfiles"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
cmd_lib = "1.3.0"
color-eyre = "0.6.2"
dirs = "4.0.0"
git2 = "0.14"
log = "0.4.17"
pretty_env_logger = "0.4.0"
# time = {version = "0.3.11", features = ["formatting"] }
# tracing = {version = "0.1.36", features = ["attributes", "log", "log-always"] }
tracing = {version = "0.1.36", features = ["attributes"] }
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
xdg = "2.4.1"
